Add time % comparison between current run and baseline
Signed-off-by: NathanDissoubray <nathan.dissoubray@rte-france.com>