@@ -11,6 +11,7 @@ import com.powsybl.benchmark.commons.Constants;
 import com.powsybl.benchmark.commons.serde.BenchmarkResult;
 import com.powsybl.benchmark.commons.state.LoadFlowParametersType;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.DoubleUnaryOperator;
@@ -33,6 +34,7 @@ public class ContingenciesBenchmarkReportMarkdownSerializer extends AbstractByNe
 
     @Override
     protected Map<String, String> getLine(List<BenchmarkResult> results) {
+        Map<String, Double> lineScores = getLineScores(results);
         //this is formatted like a double in the string, but it's an int, get the integer part with the split
         ToIntFunction<BenchmarkResult> contingenciesNumberGetter = r -> Integer.parseInt(r.parameters().get("numberOfContingencies").split("\\.")[0]);
         //all results have the same number of contingencies, just get the first
@@ -40,16 +42,30 @@ public class ContingenciesBenchmarkReportMarkdownSerializer extends AbstractByNe
         DoubleUnaryOperator scorePerContingency = d -> d / contingenciesNumber;
         //check that all results for a given network have the same number of contingencies
         if (results.stream().allMatch(r -> contingenciesNumber == contingenciesNumberGetter.applyAsInt(r))) {
-            return Map.of(
-                "Network", Constants.getPrettyNetworkName(results.get(0).parameters().get("networkName")),
-                "Contingencies", String.valueOf(contingenciesNumber),
-                getPrettyColumnName(results.get(0)), getFormattedScoreAndUnit(results.get(0), scorePerContingency),
-                getPrettyColumnName(results.get(1)), getFormattedScoreAndUnit(results.get(1), scorePerContingency),
-                getPrettyColumnName(results.get(2)), getFormattedScoreAndUnit(results.get(2), scorePerContingency)
-            );
+            Map<String, String> lineStrings = new HashMap<>();
+            lineStrings.put("Network", Constants.getPrettyNetworkName(results.getFirst().parameters().get("networkName")));
+            lineStrings.put("Contingencies", String.valueOf(contingenciesNumber));
+            int resultIndex = 0;
+            for (Map.Entry<String, Double> scorePerColumn : lineScores.entrySet()) {
+                lineStrings.put(
+                    scorePerColumn.getKey(),
+                    getFormattedScoreAndUnit(scorePerColumn.getValue(), results.get(resultIndex).scoreUnit(), scorePerContingency)
+                );
+                ++resultIndex;
+            }
+            return lineStrings;
         } else {
             throw new IllegalStateException("All results for a given network must have the same number of contingencies");
         }
+    }
+
+    @Override
+    protected Map<String, Double> getLineScores(List<BenchmarkResult> results) {
+        return Map.of(
+            getPrettyColumnName(results.get(0)), results.get(0).score(),
+            getPrettyColumnName(results.get(1)), results.get(1).score(),
+            getPrettyColumnName(results.get(2)), results.get(2).score()
+        );
     }
 
     private String getPrettyColumnName(BenchmarkResult benchmarkResult) {
